--- a/sudoku.html
+++ b/sudoku.html
@@ -13,6 +13,6 @@
 
     </div>
 
-    <script type="module" src="sudoku.js"></script>
+    <script type="module" src="/js/sudoku.js"></script>
 </body>
 </html>
