--- a/sudoku.html
+++ b/sudoku.html
@@ -10,6 +10,9 @@
 <body>
     <div class="canvas">
         <div id="game-board"></div>
+        <div id="game-menu">
+            <button type="button" id="manual-setup-btn">Manual Setup</button>
+        </div>
 
     </div>
 
