Setup mode added+ Added all the functionality to set up the board

--- a/sudoku.html
+++ b/sudoku.html
@@ -11,7 +11,10 @@
     <div class="canvas">
         <div id="game-board"></div>
         <div id="game-menu">
-            <button type="button" id="manual-setup-btn">Manual Setup</button>
+            <label>
+                <input type="checkbox" id="setup-mode-checkbox">
+                Modo de setup
+            </label>
         </div>
 
     </div>
