--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 
     </div>
 
-    <script type="module" src="/js/sudoku.js"></script>
+    <script type="module" src="./js/sudoku.js"></script>
 </body>
 </html>
