--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 <input type="checkbox" id="setup-mode-checkbox">
                 Modo de setup
             </label>
+            <label>
+                <input type="checkbox" id="pencil-mode-checkbox">
+                Modo Lápis
+            </label>
         </div>
 
     </div>
