Added buttons functionality + pencil now works, fixed minor bugs, and style of the pencil numbers

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <input type="button" value="9" class="number-btn" id="number-btn-9" />
                     </div>
                     <div class="tools-keyboard">
-                        <input type="button" value="" class="tool-btn " id="tool-btn-pencil-selected" />
+                        <input type="button" value="" class="tool-btn " id="tool-btn-pencil" />
                         <input type="button" value="" class="tool-btn" id="tool-btn-undo" />
                         <input type="button" value="" class="tool-btn" id="tool-btn-backspace" />
 
