Added different color themes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 <input type="checkbox" id="setup-mode-checkbox">
                 Modo de setup
             </label>
-            
+            <input type="button" value="Mudar tema" class="options-btn" id="theme-btn" />
+
         </div>
 
     </div>
