Generation algorithm + Started working on the generation algorithm and some changes to style

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
         </div>
         <div class="config-area">
+            <input type="button" value="Gerar novo puzzle" class="options-btn" id="generate-puzzle-btn" />
             <label>
                 <input type="checkbox" id="setup-mode-checkbox">
                 Modo de setup
